Tests/Runtime2/Error/RetryOnly/.build/timedretrygoal.pr
[
  {
    "name": "TimedRetryGoal",
    "description": "Build TimedRetryGoal steps into executable PLang actions.",
    "comment": null,
    "steps": [
      {
        "index": 0,
        "text": "add 1 to %timedRetryAttempts%, write to %timedRetryAttempts%",
        "lineNumber": 2,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "math",
            "action": "add",
            "parameters": [
              {
                "name": "A",
                "value": "%timedRetryAttempts%",
                "type": "int"
              },
              {
                "name": "B",
                "value": 1,
                "type": "int"
              }
            ],
            "return": [
              {
                "name": "__mathAddReturn__",
                "value": null
              }
            ],
            "defaults": null
          },
          {
            "module": "variable",
            "action": "set",
            "parameters": [
              {
                "name": "Name",
                "value": "%timedRetryAttempts%",
                "type": "string"
              },
              {
                "name": "Value",
                "value": "%__mathAddReturn__%",
                "type": "string"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      },
      {
        "index": 1,
        "text": "throw error \u0022timed fail\u0022",
        "lineNumber": 3,
        "indent": 0,
        "comment": null,
        "actions": [
          {
            "module": "error",
            "action": "throw",
            "parameters": [
              {
                "name": "Message",
                "value": "timed fail",
                "type": "string"
              },
              {
                "name": "StatusCode",
                "value": 500,
                "type": "int"
              }
            ],
            "return": null,
            "defaults": null
          }
        ],
        "intent": null,
        "onError": null,
        "cache": null,
        "timeout": null,
        "waitForExecution": true
      }
    ],
    "subGoals": [],
    "visibility": 1,
    "path": "/TimedRetryGoal.goal",
    "prPath": "/.build/timedretrygoal.pr",
    "hash": "c3682ca3c59a1d65c0fcf535415978b1d1d02bc7019282c388101c838ccf5612",
    "builderVersion": "0.2.2",
    "isSetup": false,
    "isEvent": false,
    "isSystem": false,
    "isTest": false,
    "inputParameters": null
  }
]